--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,8 @@
                 <span class="data">{{temperature1}}</span>
                 <span class="header">Temperature:</span>
             </div>
-            <!--<img class="graph" src='/static/humidity_graph.png' alt="Graph of humidity">-->
+            <img class="graph" src='/static/humidity_1_graph.png' alt="Graph of humidity">
+            <img class="graph" src='/static/temperature_1_graph.png' alt="Graph of temperature">
         </div>
     </body>
 
@@ -31,7 +32,8 @@
                 <span class="data">{{temperature2}}</span>
                 <span class="header">Temperature:</span>
             </div>
-            <!--<img class="graph" src='/static/humidity_graph.png' alt="Graph of humidity">-->
+            <img class="graph" src='/static/humidity_2_graph.png' alt="Graph of humidity">
+            <img class="graph" src='/static/temperature_2_graph.png' alt="Graph of temperature">
         </div>
     </body>
 </html>
