--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,10 @@ body {
     align-items: center;
     justify-content: center;
     color: #a5a5a5;
-    border-radius: 6px
+    border-radius: 15px;
+    margin-bottom: 3px;
+    margin-right: 2px;
+    margin-left: 2px;
 }
 
 .tab_selected{
@@ -38,7 +41,7 @@ body {
     margin: 40px auto;
     margin-top: 1px;
     padding: 20px;
-    border-radius: 6px;
+    border-radius: 15px;
 }
 
 .title {
